crates/forge_app/src/snapshots/forge_app__execution_result__tests__follow_up_no_question.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "User interrupted the selection",
        ),
    ],
}
