crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_create_overwrite.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_creation_status
  path="/home/user/existing_file.txt"
  total_lines="1"
>File created successfully
<file_diff><![CDATA[1        |-Old content
    1    |+New content for the file
]]></file_diff>
</file_creation_status>
