crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_create_with_warning.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "---\npath: /home/user/file_with_warning.txt\noperation: CREATE\ntotal_chars: 20\nWarning: File created in non-standard location\n---\n",
        ),
    ],
}
