crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_patch_with_warning.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "---\npath: /home/user/large_file.txt\ntotal_chars: 20\nwarning: Large file modification\n---\n1   1    | line1\n    2    |+new line\n2   3    | line2\n",
        ),
    ],
}
