crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_read_basic.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "---\npath: /home/user/test.txt\n---\nHello, world!\nThis is a test file.",
        ),
    ],
}
