crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_read_basic_special_chars.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_content
  path="/home/user/test.txt"
  display_lines="1-1"
  total_lines="1"
><![CDATA[struct Foo<T>{ name: T }]]>
</file_content>
