crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_read_with_explicit_range.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "---\npath: /home/user/test.txt\nstart_line: 2\nend_line: 3\ntotal_lines: 5\n---\nLine 1\nLine 2\nLine 3",
        ),
    ],
}
