crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_read_with_truncation_path.snap
---
source: crates/forge_app/src/execution_result.rs
expression: actual
---
ToolOutput {
    is_error: false,
    values: [
        Text(
            "---\npath: /home/user/large_file.txt\nstart_line: 1\nend_line: 100\ntotal_lines: 200\n---\nTruncated content",
        ),
    ],
}
