crates/forge_app/src/snapshots/forge_app__execution_result__tests__fs_remove_not_found.snap
---
source: crates/forge_app/src/execution_result.rs
expression: to_value(actual)
---
<file_removed path="/home/user/nonexistent_file.txt" status="File not found"></file_removed>
